@@ -2,7 +2,7 @@
  *      desktop.c
  *
  *      Copyright 2010 - 2012 Hong Jen Yee (PCMan) <pcman.tw@gmail.com>
- *      Copyright 2012-2016 Andriy Grytsenko (LStranger) <andrej@rep.kiev.ua>
+ *      Copyright 2012-2017 Andriy Grytsenko (LStranger) <andrej@rep.kiev.ua>
  *
  *      This program is free software; you can redistribute it and/or modify
  *      it under the terms of the GNU General Public License as published by
@@ -423,6 +423,9 @@ static void save_item_pos(FmDesktop* desktop)
                 break;
             case '\\':
                 g_string_append(buf, "\\\\");
+                break;
+            case '[':
+                g_string_append(buf, "\\[");
                 break;
             case ']':
                 g_string_append(buf, "\\]");
